--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-PORT = 3001
 
-REACT_APP_DEV_URL= "http://localhost:3001"
 
-REACT_APP_PROD_URL= "https://photogallery2426.herokuapp.com"
+REACT_APP_DEV_URL= "https://photogalllery-json.onrender.com"
+
+SKIP_PREFLIGHT_CHECK=true
+
+
 
 
 
